[package]
name = "eef-gui"
version = "0.1.0"
edition = "2021"
build = "build.rs"


[dependencies]
iced = "0.9.0"
native-dialog = "0.6.3"
rfd = "*"
serde_json = "1.0"
prettytable-rs = "0.10.0"

[dependencies.pyo3]
version = "0.19.0"

[features]
extension-module = ["pyo3/extension-module"]

[build-dependencies]
pkg-config = "0.3"
